Add burger and slide offer in jQ

--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
         <i class="fas fa-bars"></i>
       </div>
       <div class="menu__not-burger">
-
         <ul class="menu__lists">
           <li class="menu__list">
-            <a href="#" class="menu__link"><img src="img/logo/LogoSmall.jpg" alt="Logo Gabinet kosmetyczny Scarlett"></a>
+            <a href="#" class=""><img src="img/logo/LogoSmall.jpg" alt="Logo Gabinet kosmetyczny Scarlett"></a>
           </li>
           <li class="menu__list">
             <a href="#aboutMe" class="menu__link">O mnie</a>
@@ -95,12 +94,11 @@
     <a name="offer"></a>
     <h2 class="title">Oferta</h2>
     <section class="offer__treatments">
-      <div class="offer__name addLine">
+      <div class="offer__name">
         <p class="offer__text">Kosmetyka dłoni i paznokci</p>
-        <div class="offer__show offer__show--rotate">+</div>
+        <div class="offer__show">+</div>
       </div>
-      <!-- usunąć klase active -->
-      <article class="offer__treatment offer--is-active">
+      <article class="offer__treatment ">
         <div class="offer__treatment-box">
           <p>Manicure z odżywką </p>
           <p>25zł</p>
@@ -164,68 +162,69 @@
         <p class="offer__text">Laseroterapia</p>
         <div class="offer__show">+</div>
       </div>
-      <article class="offer__epil offer__treatment offer--is-active">
-        <div class="offer__epil-show">
-          <div class="offer__name">
+      <article class="offer__treatment">
+        <div class="offer__epil">
+          <div class="offer__epil-name">
             <p>Twarz</p>
-            <div class="offer__show">+</div>
-          </div>
-          <div class="offer__IPL">
-            <div class="offer__name offer__name--small">
-              <p>Wąsik / Broda</p>
-              <p>100zł</p>
-            </div>
-            <div class="offer__name offer__name--small">
-              <p>Szyja</p>
-              <p>100 - 150zł</p>
-            </div>
-
-            <div class="offer__name offer__name--small">
-              <p>Baki</p>
-              <p>100zł</p>
-            </div>
-            <div class="offer__name offer__name--small">
-              <p>Cała twarz</p>
-              <p>200zł</p>
-            </div>
+            <!-- <div class="offer__epil-show">+</div> -->
           </div>
         </div>
-
-        <div class="offer__epil-show">
-          <div class="offer__name">
-            <p>Ręce</p>
-            <div class="offer__show">+</div>
+        <div class="offer__ipl">
+          <div class="offer__ipl-name offer__name--small">
+            <p>Wąsik / Broda</p>
+            <p>100zł</p>
           </div>
-          <div class="offer__IPL">
-            <div class="offer__name offer__name--small">
+          <div class="offer__ipl-name offer__name--small">
+            <p>Szyja</p>
+            <p>100 - 150zł</p>
+          </div>
+
+          <div class="offer__ipl-name offer__name--small">
+            <p>Baki</p>
+            <p>100zł</p>
+          </div>
+          <div class="offer__ipl-name offer__name--small">
+            <p>Cała twarz</p>
+            <p>200zł</p>
+          </div>
+        </div>
+        </div>
+
+        <div class="offer__epil">
+          <div class="offer__epil-name">
+            <p>Ręce</p>
+            <!-- <div class="offer__show">+</div> -->
+          </div>
+          <div class="offer__ipl">
+            <div class="offer__ipl-name offer__name--small">
               <p>Ramiona</p>
               <p>150zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Przedramiona</p>
               <p>150zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Dłonie</p>
               <p>100zł</p>
             </div>
           </div>
 
-          <div class="offer__epil-show">
-            <div class="offer__name">
+          <div class="offer__epil">
+            <div class="offer__epil-name">
               <p>Nogi</p>
-              <div class="offer__show">+</div>
+              <!-- <div class="offer__show">+</div> -->
             </div>
-            <div class="offer__IPL">
-              <div class="offer__name offer__name--small">
+            <div class="offer__ipl">
+              <div class="offer__ipl-name offer__name--small">
                 <p>Uda</p>
                 <p>180zł</p>
               </div>
-              <div class="offer__name offer__name--small">
+              <div class="offer__ipl-name offer__name--small">
                 <p>Łydki</p>
                 <p>150zł</p>
               </div>
-              <div class="offer__name offer__name--small">
+              <div class="offer__ipl-name offer__name--small">
                 <p>Stopy</p>
                 <p>100zł</p>
               </div>
@@ -233,53 +232,53 @@
           </div>
         </div>
 
-        <div class="offer__epil-show">
-          <div class="offer__name">
+        <div class="offer__epil">
+          <div class="offer__epil-name">
             <p>Tułów</p>
-            <div class="offer__show">+</div>
+            <!-- <div class="offer__show">+</div> -->
           </div>
-          <div class="offer__IPL">
-            <div class="offer__name offer__name--small">
+          <div class="offer__ipl">
+            <div class="offer__ipl-name offer__name--small">
               <p>Kark</p>
               <p>100 - 150zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Plecy</p>
               <p>150 - 200zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Klatka piersiowa</p>
               <p>100 - 150zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Okolice sutków</p>
               <p>100zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Pachy</p>
               <p>100zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Brzuch</p>
               <p>100 - 150zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Linia brzucha</p>
               <p>100zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Bikini (pachwiny)</p>
               <p>100 - 150zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Bikini całkowite</p>
               <p>150 - 200zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Pośladki</p>
               <p>100 - 150zł</p>
             </div>
-            <div class="offer__name offer__name--small">
+            <div class="offer__ipl-name offer__name--small">
               <p>Szpara pośladkowa</p>
               <p>100zł</p>
             </div>
@@ -293,39 +292,39 @@
         <div class="offer__show">+</div>
       </div>
       <article class="offer__treatment">
-        <div class="offer__name">
+        <div class="offer__treatment-box">
           <p>Wąsik</p>
           <p>10zł</p>
         </div>
-        <div class="offer__name">
+        <div class="offer__treatment-box">
           <p>Broda</p>
           <p>10zł</p>
         </div>
-        <div class="offer__name">
+        <div class="offer__treatment-box">
           <p>Wąsik + broda</p>
           <p>15zł</p>
         </div>
-        <div class="offer__name">
+        <div class="offer__treatment-box">
           <p>ręce</p>
           <p>40zł</p>
         </div>
-        <div class="offer__name">
+        <div class="offer__treatment-box">
           <p>pachy</p>
           <p>30zł</p>
         </div>
-        <div class="offer__name">
+        <div class="offer__treatment-box">
           <p>łydki</p>
           <p>35zł</p>
         </div>
-        <div class="offer__name">
+        <div class="offer__treatment-box">
           <p>Uda</p>
           <p>40zł</p>
         </div>
-        <div class="offer__name">
+        <div class="offer__treatment-box">
           <p>całe nogi</p>
           <p>70zł</p>
         </div>
-        <div class="offer__name">
+        <div class="offer__treatment-box">
           <p>Bikini</p>
           <p>40zł</p>
         </div>
@@ -363,8 +362,6 @@
           <p>35zł</p>
         </div>
       </article>
-
-
 
     </section>
     <section class="offer__treatments">
@@ -442,7 +439,7 @@
         <p class="offer__text">Fotoodmładzanie</p>
         <div class="offer__show">+</div>
       </div>
-      <article class="offer__treatment active">
+      <article class="offer__treatment">
         <div class="offer__treatment-box">
           <p>Czoło </p>
           <p>100zł</p>
@@ -462,13 +459,13 @@
       </article>
     </section>
     <section class="offer__treatments">
-      <div class="offer__name addLine">
+      <div class="offer__name">
         <p class="offer__text ">Zamykanie naczynek / redukcja rumienia
           / usuwanie przebarwień (melazma, ostuda, przebarwienia)
         </p>
         <div class="offer__show">+</div>
       </div>
-      <article class="offer__treatment offer--is-active">
+      <article class="offer__treatment">
         <div class="offer__treatment-box">
           <p>Policzki / czoło </p>
           <p>150zł</p>
@@ -670,6 +667,10 @@
     <p>All right reserved. Copyright © 2018 </p>
     <p>Strona wykonana przez: <a href="https://github.com/goskanowak" target="_blank"> Małgorzata Nowak</a></p>
   </section>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
