Add subpage gallery and library LightBox

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Gabinet Kosmetyczny Scarlett</title>
+
   <link rel="stylesheet" href="reset.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:400,700&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Mali:400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
     crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash&amp;subset=latin-ext" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Mali:400,700&amp;subset=latin-ext" rel="stylesheet">
+
 
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -27,7 +27,7 @@
       <div class="menu__not-burger">
         <ul class="menu__lists">
           <li class="menu__list">
-            <a href="#" class=""><img src="img/logo/LogoSmall.jpg" alt="Logo Gabinet kosmetyczny Scarlett"></a>
+            <a href="#" class=""><img src="img/logo/logoTransparent.png" alt="Logo Gabinet kosmetyczny Scarlett"></a>
           </li>
           <li class="menu__list">
             <a href="#aboutMe" class="menu__link">O mnie</a>
@@ -563,7 +563,7 @@
     </section>
     <!-- <p class="offer__note">Powyższe ceny są cenami orientacyjnymi i nie stanowią oferty w rozumieniu przepisów Kodeksu
       Cywilnego.</p> -->
-    <h3 class="offer__not-found">Nie znalazłaś zabiegu? Zadzwoń! I dowiedz się więcej: <span>518 596 258</span></h3>
+    <h3 class="offer__not-found">Nie znalazłaś zabiegu? Zadzwoń! I dowiedz się więcej: <span>504 538 645</span></h3>
   </section>
 
   <!-- Voucher -->
@@ -592,14 +592,14 @@
     <div class="promo">
       <h3 class="title title--mod">Aktualne promocje: </h3>
       <div class="promo__promotion">
-        <h4 class="promo__actual-offer">Peeling kawitacyjny <span>69 zł</span> <span>59 zł</span></h4>
+        <h4 class="promo__actual-offer">Peeling kawitacyjny <span>80 zł</span> <span>70 zł</span></h4>
         <p>Promocja trwa do <span>31.12.2018r.</span></p>
         <p>Do końca promocji pozostało:</p>
         <div class="promo__time">
-          <span class="promo__days">28 </span><span> dni</span>
-          <span class="promo__hours">15</span><span></span> godz.</span>
-          <span class="promo__mins">35 </span><span></span> min.</span>
-          <span class="promo__sec">45 </span><span></span> sek.</span></div>
+          <span class="promo__days"> </span><span> dni</span>
+          <span class="promo__hours"></span><span></span> godz.</span>
+          <span class="promo__mins"> </span><span></span> min.</span>
+          <span class="promo__sec"> </span><span></span> s.</span></div>
       </div>
     </div>
   </section>
@@ -610,19 +610,19 @@
     <h3 class="title">Galeria</h3>
     <div class="gallery__content">
       <div class="gallery__box gallery__face">
-        <p class="gallery__text"> Zabiegi na twarz</p>
+        <a href="gallery.html" class="gallery__text"> Zabiegi na twarz</a>
       </div>
       <div class="gallery__box gallery__body">
-        <p class="gallery__text"> Zabiegi na ciało</p>
+        <a href="gallery.html" class="gallery__text"> Zabiegi na ciało</a>
       </div>
       <div class="gallery__box gallery__maniciure">
-        <p class="gallery__text"> Maniciure / Pediciure</p>
+        <a href="gallery.html" class="gallery__text"> Maniciure / Pediciure</a>
       </div>
       <div class="gallery__box gallery__laser">
-        <p class="gallery__text">Depilacja laserowa IPL</p>
+        <a href="gallery.html" class="gallery__text">Depilacja laserowa IPL</a>
       </div>
       <div class="gallery__box gallery__office">
-        <p class="gallery__text">Gabinet</p>
+        <a href="gallery.html" class="gallery__text">Gabinet</a>
       </div>
     </div>
 
@@ -647,7 +647,7 @@
           <h4><i class="fas fa-home"></i> Adres: </h4>
           <p>ul. Zadębie 2b</p>
           <p>Skierniewice</p>
-          <p>tel: 526 956 852</p>
+          <p>tel: 504 538 645</p>
         </div>
         <div class="contact__media">
           <i class="fab fa-google-plus-square"></i>
@@ -656,7 +656,7 @@
 
       </div>
       <div class="contact__map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78677.39663629346!2d20.09913467565504!3d51.95823367383833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471960563ba116f9%3A0x7928f5df207f9c10!2s96-100+Skierniewice!5e0!3m2!1spl!2spl!4v1542977309012"
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1739.0437531021448!2d20.142189076879504!3d51.94527506135628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spl!2spl!4v1545049189840"
           frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </div>
@@ -664,7 +664,7 @@
 
   <!-- Footer -->
   <section class="footer">
-    <p>All right reserved. Copyright © 2018 </p>
+    <p>© 2018 </p>
     <p>Strona wykonana przez: <a href="https://github.com/goskanowak" target="_blank"> Małgorzata Nowak</a></p>
   </section>
 
