Change color menu burger and clear code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
     crossorigin="anonymous">
 
-
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -176,7 +175,7 @@
           </div>
           <div class="offer__ipl-name offer__name--small">
             <p>Szyja</p>
-            <p>100 - 150zł</p>
+            <p>100-150zł</p>
           </div>
 
           <div class="offer__ipl-name offer__name--small">
@@ -240,15 +239,15 @@
           <div class="offer__ipl">
             <div class="offer__ipl-name offer__name--small">
               <p>Kark</p>
-              <p>100 - 150zł</p>
+              <p>100-150zł</p>
             </div>
             <div class="offer__ipl-name offer__name--small">
               <p>Plecy</p>
-              <p>150 - 200zł</p>
+              <p>150-200zł</p>
             </div>
             <div class="offer__ipl-name offer__name--small">
               <p>Klatka piersiowa</p>
-              <p>100 - 150zł</p>
+              <p>100-150zł</p>
             </div>
             <div class="offer__ipl-name offer__name--small">
               <p>Okolice sutków</p>
@@ -260,7 +259,7 @@
             </div>
             <div class="offer__ipl-name offer__name--small">
               <p>Brzuch</p>
-              <p>100 - 150zł</p>
+              <p>100-150zł</p>
             </div>
             <div class="offer__ipl-name offer__name--small">
               <p>Linia brzucha</p>
@@ -268,15 +267,15 @@
             </div>
             <div class="offer__ipl-name offer__name--small">
               <p>Bikini (pachwiny)</p>
-              <p>100 - 150zł</p>
+              <p>100-150zł</p>
             </div>
             <div class="offer__ipl-name offer__name--small">
               <p>Bikini całkowite</p>
-              <p>150 - 200zł</p>
+              <p>150-200zł</p>
             </div>
             <div class="offer__ipl-name offer__name--small">
               <p>Pośladki</p>
-              <p>100 - 150zł</p>
+              <p>100-150zł</p>
             </div>
             <div class="offer__ipl-name offer__name--small">
               <p>Szpara pośladkowa</p>
@@ -305,15 +304,15 @@
           <p>15zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>ręce</p>
+          <p>Ręce</p>
           <p>40zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>pachy</p>
+          <p>Pachy</p>
           <p>30zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>łydki</p>
+          <p>Łydki</p>
           <p>35zł</p>
         </div>
         <div class="offer__treatment-box">
@@ -321,7 +320,7 @@
           <p>40zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>całe nogi</p>
+          <p>Całe nogi</p>
           <p>70zł</p>
         </div>
         <div class="offer__treatment-box">
@@ -339,7 +338,7 @@
       <article class="offer__treatment">
         <div class="offer__treatment-box">
           <p>Regulacja brwi</p>
-          <p>7 - 10zł</p>
+          <p>7-10zł</p>
         </div>
 
         <div class="offer__treatment-box">
@@ -354,7 +353,7 @@
 
         <div class="offer__treatment-box">
           <p>Regulacja brwi</p>
-          <p>7 - 10zł</p>
+          <p>7-10zł</p>
         </div>
 
         <div class="offer__treatment-box">
@@ -375,20 +374,20 @@
           <p>100zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Mikrodermabrazja diamentowa ( 30 min + maska)</p>
-          <p>120 - 150zł</p>
+          <p>Mikrodermabrazja diamentowa (30min + maska)</p>
+          <p>120-150zł</p>
         </div>
         <div class="offer__treatment-box">
           <p>Mikrodermabrazja diamentowa pleców </p>
           <p>150zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Peeling kawitacyjny twarzy ( 20min + maska) </p>
+          <p>Peeling kawitacyjny twarzy (20min + maska) </p>
           <p>80zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>złuszczenie naskórka , skóry właściwej (MONOKWASY) </p>
-          <p>100 - 200zł</p>
+          <p>Złuszczenie naskórka, skóry właściwej (MONOKWASY) </p>
+          <p>100-200zł</p>
         </div>
       </article>
     </section>
@@ -399,36 +398,36 @@
       </div>
       <article class="offer__treatment">
         <div class="offer__treatment-box">
-          <p>Okolica oczu ( 10 min) </p>
+          <p>Okolica oczu (10 min)</p>
           <p>60zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Bruzda nosowo- wargowa ( 15 min) </p>
+          <p>Bruzda nosowo - wargowa (15min) </p>
           <p>80zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Okolica czoła + lwia zmarszczka ( 15min) </p>
+          <p>Okolica czoła + lwia zmarszczka (15min) </p>
           <p>100zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Twarz ( 45 min) </p>
+          <p>Twarz (45min) </p>
           <p>160zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Twarz + szyja ( 70 min) </p>
+          <p>Twarz + szyja (70min) </p>
           <p>190zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Ramiona ( 45min) </p>
+          <p>Ramiona (45min) </p>
           <p>100zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Brzuch / pośladki / uda ( 40/ 40/ 50 min) </p>
+          <p>Brzuch / pośladki / uda (40/40/50min) </p>
           <p>130zł</p>
         </div>
 
         <div class="offer__treatment-box">
-          <p>Uda + pośladki ( 80 min) </p>
+          <p>Uda + pośladki (80min) </p>
           <p>170zł</p>
         </div>
 
@@ -441,7 +440,7 @@
       </div>
       <article class="offer__treatment">
         <div class="offer__treatment-box">
-          <p>Czoło </p>
+          <p>Czoło</p>
           <p>100zł</p>
         </div>
         <div class="offer__treatment-box">
@@ -476,11 +475,11 @@
         </div>
         <div class="offer__treatment-box">
           <p>Pojedyńcze zmiany</p>
-          <p>50 - 80zł</p>
+          <p>50-80zł</p>
         </div>
         <div class="offer__treatment-box">
           <p>Cała twarz </p>
-          <p>150 - 200zł</p>
+          <p>150-200zł</p>
         </div>
       </article>
     </section>
@@ -501,11 +500,11 @@
         </div>
         <div class="offer__treatment-box">
           <p>Pojedyńcze zmiany</p>
-          <p>50 - 80zł</p>
+          <p>50-80zł</p>
         </div>
         <div class="offer__treatment-box">
           <p>Cała twarz </p>
-          <p>150 - 200zł</p>
+          <p>150-200zł</p>
         </div>
       </article>
     </section>
@@ -517,23 +516,23 @@
       </div>
       <article class="offer__treatment">
         <div class="offer__treatment-box">
-          <p>Ramiona / brzuch / pośladki ( 30 min) </p>
+          <p>Ramiona / brzuch / pośladki (30min) </p>
           <p>80zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Uda (40 min)</p>
+          <p>Uda (40min)</p>
           <p>120zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Nogi + pośladki (50 min) </p>
+          <p>Nogi + pośladki (50min) </p>
           <p>150zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Nogi + pośladki + brzuch ( 80 min) </p>
+          <p>Nogi + pośladki + brzuch (80min) </p>
           <p>180zł</p>
         </div>
         <div class="offer__treatment-box">
-          <p>Pachy </p>
+          <p>Pachy</p>
           <p>150zł</p>
         </div>
       </article>
@@ -545,14 +544,6 @@
         <div class="offer__show">+</div>
       </div>
       <article class="offer__treatment">
-        <div class="offer__treatment-box">
-          <p>Pachy</p>
-          <p>80zł</p>
-        </div>
-        <div class="offer__treatment-box">
-          <p>Fale radiowe</p>
-          <p>zł</p>
-        </div>
         <div class="offer__treatment-box">
           <p>Lipoliza ultrakawitacyjna </p>
           <p>zł</p>
