Change slider on JS

--- a/index.html
+++ b/index.html
@@ -52,15 +52,17 @@
   <!-- Slider -->
   <section class="slider">
     <div id="carousel">
-      <li class="slider__list"><img src="./img/gabinet/DSC_0200.JPG" alt="" class="slider__img"></li>
-      <li class="slider__list"><img src="../img/gabinet/DSC_0203.JPG" alt="" class="slider__img"></li>
+      <!-- <li class="slider__list"> -->
+      <img src="./img/gabinet/DSC_0200.JPG" alt="" class="slider__img">
+      <!-- </li> -->
+      <!-- <li class="slider__list"><img src="../img/gabinet/DSC_0203.JPG" alt="" class="slider__img"></li>
       <li class="slider__list"><img src="./img/gabinet/DSC_0204.JPG" alt="" class="slider__img"></li>
       <li class="slider__list"><img src="./img/gabinet/DSC_0205.JPG" alt="" class="slider__img"></li>
       <li class="slider__list"><img src="./img/gabinet/DSC_0206.JPG" alt="" class="slider__img"></li>
       <li class="slider__list"><img src="./img/gabinet/DSC_0210.JPG" alt="" class="slider__img"></li>
       <li class="slider__list"><img src="./img/gabinet/DSC_0219.JPG" alt="" class="slider__img"></li>
       <li class="slider__list"><img src="./img/gabinet/DSC_0202.JPG" alt="" class="slider__img"></li>
-    </div>
+    </div> -->
   </section>
 
   <!-- AboutMe -->
